[editor] Fix property panel input element's width and alignment

--- a/projects/editor/src/app/components/unit-view/page-view/properties/element-properties.component.css
+++ b/projects/editor/src/app/components/unit-view/page-view/properties/element-properties.component.css
@@ -31,3 +31,9 @@
   text-align: center;
   font-weight: bold;
 }
+
+mat-divider {
+  margin: 20px;
+  border-top-width: 9px;
+  border-top-style: dotted;
+}
